added new links

--- a/about.html
+++ b/about.html
@@ -18,7 +18,6 @@
         background-color: #061139;
       }
     </style>
-    <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiWVo1blBvOUUwVGhxR0N2VnN6UVNiQ05RZ3J5bkRiVEU4MmdzcW9yNk16USIsInkiOiJaajNpbzc0UXhTWDh1b3lBNm1fOExDVnJtVDREd0RsR3UwbHVMWmpyY2hjIiwiaHViX2lkIjoiRHpNNUJqYUhzWkEyTkVwVSJ9" />
     <meta name="webspace.environment.type" content="terrain" />
     <meta name="webspace.environment.terrain.colors.ground" content="#90FFA2" />
     <meta name="webspace.environment.terrain.colors.edge" content="#010707" />
@@ -35,16 +34,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;1,700&amp;display=swap" rel="stylesheet" />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;1,700&amp;amp;amp;amp;amp;amp;amp;display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;1,700&amp;amp;amp;amp;amp;amp;amp;amp;display=swap');
     </style>
+    <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiWVo1blBvOUUwVGhxR0N2VnN6UVNiQ05RZ3J5bkRiVEU4MmdzcW9yNk16USIsInkiOiJaajNpbzc0UXhTWDh1b3lBNm1fOExDVnJtVDREd0RsR3UwbHVMWmpyY2hjIiwiaHViX2lkIjoiNHRvaWNheVNQUHROeEt2YyJ9" />
   </head>
   <body>
     <div id="ar07mcp" contenteditable="" draggable="" style="overflow-y: scroll; font-family: sans-serif; transform: translate3d(993cm, 260cm, -131cm); ">
       <p>Hello!</p>
       <p><br /></p>
-      <p>I am <strong>PRINCESS INTERNET CAFé</strong> and this is my site! Or rather, my <a href="https://github.com/webspace-sdk/webspace-sdk.github.io" target="_blank">webspace</a>.</p>
+      <p>I am <strong>PRINCESS INTERNET CAFé</strong> and this is my site! Or rather, my <a href="https://webspaces.space/" target="_blank">webspace</a>.</p>
       <p><br /></p>
-      <p>I make videogames in my spare time. You can check them all out on my <a href="https://princessinternetcafe.itch.io/" target="_blank">itch.io</a>.</p>
+      <p>I make videogames in my spare time. You can check them all out on my <a href="https://princessinternetcafe.itch.io/" target="_blank">itch.io</a>. You can also follow me on <a href="https://cohost.org/PRINCESSINTERNETCAFe" target="_blank">cohost</a>!</p>
+      <p><br /></p>
+      <p>&lt;--- To explore this webspace, click on "Home World". </p>
+      <p>Works better on desktop.</p>
     </div>
   </body>
 </html>
