--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 								<span class="text-uppercase">Socials</span>
 								<a href="https://princessinternetcafe.itch.io" target="_blank" class="social-item">🎮 itch.io</a>
 								<br>
-								<a href="https://github.com/PRINCESSINTERNETCAFe" target="_blank" class="social-item">🐘 mastodon</span></a>
+								<a href="https://gamedev.lgbt/@PRINCESSINTERNETCAFe" target="_blank" class="social-item" rel="me">🐘 mastodon</span></a>
 								<br>
 								<a href="https://princessinternetcafe.cohost.org" target="_blank" class="social-item">🐞 cohost</span></a>
 							</li>
@@ -542,24 +542,6 @@
 					</div>
 				</div>
 				
-				<!-- <div class="col-md-5 pl-md-5">
-					<ul class="site-contact-details">
-						<li>
-							<span class="text-uppercase">Email</span>
-							<script language="javascript">
-								XaMmCReBwJVPSmg();
-								</script>		
-							</li>
-						<li>
-							<span class="text-uppercase">Socials</span>
-							<a href="https://princessinternetcafe.itch.io" target="_blank" class="social-item">itch.io</a>
-							<br>
-							<a href="https://princessinternetcafe.cohost.org" target="_blank" class="social-item">cohost</span></a>
-							<br>
-							<a href="https://github.com/PRINCESSINTERNETCAFe" target="_blank" class="social-item">mastodon</span></a>
-						</li>
-					</ul>
-				</div> -->
 			</div>
 		</div>
 	</section>
