--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
 						<h2>About <strong>Me</strong></h2>
 					</div>
 					<p class="lead">One day I started making games and I haven't been able to stop ever since.</p>
-					<p class="mb-5  ">David. Millenial. UK.
+					<p class="mb-5  ">David. Videogame Artist. Bristol, UK.
 						<br>
 						Narrative Designer with a penchant for worldbuilding and crafting memorable characters.
 					</p>
 
 					<p>
+						<a href="https://princessinternetcafe.itch.io" target="_blank" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Play my games</a>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Say Hi</a>
 					</p>
 				</div>
@@ -256,6 +257,13 @@
 				</div>
 				<div class="col-md-6">
 					<h2 class="mb-5">Workshops</h2>
+					<div class="resume-item mb-4">
+						<span class="date"><span class="icon-calendar"></span> June 2024</span>
+						<h3><a href="https://drive.google.com/drive/folders/1LBcQrw9qhNUWh4Y6buCipBMs142qwsBG?usp=sharing" target="_blank">Building Tiny Narrative Worlds: Binksi Workshop</a></h3>
+						<p>A 2 hour-long workshop on bipsi, ink and binksi. Imparted alongside <a href="https://rubereaglenest.itch.io" target="_blank" class=>Ruber Eaglenest</a>.</p>
+						<span class="school">Narrascope 2024</span>
+					</div>
+
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> February 2023</span>
 						<h3><a href="https://www.youtube.com/watch?v=qApAT6IFTBM" target="_blank">Creando Juegos lo-fi contracultura en la web</a></h3>
@@ -504,8 +512,9 @@
 								<a href="https://princessinternetcafe.itch.io" target="_blank" class="social-item">🎮 itch.io</a>
 								<br>
 								<a href="https://gamedev.lgbt/@PRINCESSINTERNETCAFe" target="_blank" class="social-item" rel="me">🐘 mastodon</span></a>
-								<br>
+								<!--<br>
 								<a href="https://princessinternetcafe.cohost.org" target="_blank" class="social-item">🐞 cohost</span></a>
+							-->
 							</li>
 						</ul>
 					</div>
@@ -518,6 +527,8 @@
 							<li>
 								<span class="text-uppercase">Things I'm part of</span>
 								<a href="https://twitter.com/Madriguera_lgbt" target="_blank" class="social-item">🏳️‍🌈 La Madriguera</a>
+								<br>
+								<a href="https://lithobreakers.itch.io/" target="_blank" class="social-item">🌠 LITHOBREAKERS</span></a>
 								<br>
 								<a href="https://gamedevgalaxy.info/" target="_blank" class="social-item">🌌 Game Dev Galaxy</span></a>
 							</li>
